--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,91 @@
+# Configuración general de la aplicación
 spring.application.name=literalura
+# Nombre de la aplicación, utilizado para identificarla en registros y logs.
+
+# Configuración de la base de datos
+spring.datasource.url=jdbc:postgresql://localhost:5432/literalura
+# URL de conexión a la base de datos PostgreSQL.
+# Formato: jdbc:postgresql://<host>:<puerto>/<nombre_de_base_de_datos>
+
+spring.datasource.username=${DB_USER}
+# Nombre de usuario para la conexión a la base de datos.
+# Utiliza una variable de entorno DB_USER para mayor seguridad.
+
+spring.datasource.password=${DB_PASSWORD}
+# Contraseña para la conexión a la base de datos.
+# Utiliza una variable de entorno DB_PASSWORD para mayor seguridad.
+
+spring.jpa.hibernate.ddl-auto=update
+# Modo de generación de esquema de Hibernate.
+# update: actualiza el esquema de la base de datos según las entidades mapeadas.
+
+spring.jpa.show-sql=false
+# Muestra las consultas SQL generadas por Hibernate en la consola.
+# false: no muestra las consultas SQL para mejorar el rendimiento y la claridad de los logs.
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# Dialecto de Hibernate para PostgreSQL.
+# Especifica cómo Hibernate debe generar SQL para PostgreSQL.
+
+# Configuración de logging
+logging.level.root=INFO
+# Nivel de logging general de la aplicación.
+# INFO: muestra mensajes de nivel INFO y superiores (WARN, ERROR).
+
+logging.level.org.springframework.jdbc=INFO
+# Nivel de logging para las operaciones JDBC de Spring.
+# INFO: muestra mensajes de nivel INFO y superiores.
+
+logging.level.org.hibernate.SQL=INFO
+# Nivel de logging para las consultas SQL generadas por Hibernate.
+# INFO: muestra las consultas SQL ejecutadas por Hibernate.
+
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
+# Nivel de logging para los valores bindeados en las consultas SQL.
+# WARN: muestra solo mensajes de advertencia y superiores.
+
+logging.level.org.hibernate.tool.hbm2ddl=INFO
+# Nivel de logging para la generación de esquemas de Hibernate.
+# INFO: muestra mensajes de nivel INFO y superiores.
+
+logging.level.org.hibernate.engine.transaction.internal.TransactionImpl=INFO
+# Nivel de logging para las transacciones de Hibernate.
+# INFO: muestra mensajes de nivel INFO y superiores.
+
+logging.level.org.hibernate.engine.jdbc.connections.internal.DriverManagerConnectionProviderImpl=INFO
+# Nivel de logging para el proveedor de conexiones JDBC de Hibernate.
+# INFO: muestra mensajes de nivel INFO y superiores.
+
+logging.level.com.zaxxer.hikari=INFO
+# Nivel de logging para el pool de conexiones HikariCP.
+# INFO: muestra mensajes de nivel INFO y superiores.
+
+# Configuración de HikariCP (pool de conexiones)
+spring.datasource.hikari.connection-timeout=30000
+# Tiempo máximo de espera para obtener una conexión del pool.
+# 30000 ms (30 segundos): tiempo máximo de espera antes de lanzar una excepción.
+
+spring.datasource.hikari.maximum-pool-size=10
+# Tamaño máximo del pool de conexiones.
+# 10: número máximo de conexiones que pueden existir en el pool simultáneamente.
+
+spring.datasource.hikari.minimum-idle=5
+# Número mínimo de conexiones en estado idle en el pool.
+# 5: número mínimo de conexiones que deben mantenerse en el pool en estado idle.
+
+spring.datasource.hikari.idle-timeout=600000
+# Tiempo de espera antes de cerrar una conexión idle.
+# 600000 ms (10 minutos): tiempo de espera antes de cerrar una conexión idle.
+
+spring.datasource.hikari.max-lifetime=1800000
+# Tiempo de vida máximo de una conexión en el pool.
+# 1800000 ms (30 minutos): tiempo máximo que una conexión puede permanecer en el pool antes de ser cerrada.
+
+spring.datasource.hikari.leak-detection-threshold=2000
+# Umbral de detección de fugas de conexiones.
+# 2000 ms (2 segundos): tiempo después del cual se considera una fuga de conexión.
+
+# Deshabilitación de la inicialización del esquema
+spring.datasource.initialization-mode=never
+# Modo de inicialización del esquema de la base de datos.
+# never: no inicializa el esquema de la base de datos.
